2006-05-01  John Ehresman <jpe@wingware.com>

	* gtk/gtktreeview.override: Restore override for
	TreeView.get_visible_rect

2006-05-01  Yevgen Muntyan  <muntyan@tamu.edu>

	* codegen/reversewrapper.py (ReverseWrapper.generate): Missing ()
	in Py_BuildValue template string to force a tuple to be created
	even when number of retvals is one.  Reviewed by Gustavo.  Fixes
	Bug 340162 "Missing ()".

2006-04-26  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gdk.override (_wrap_gdk_event_handler_set): 
	* gtk/gdk.defs (event_handler_set): 
	Wrap gdk_event_handler_set

	* gtk/Makefile.am:
	* gtk/gdk.override:
	* gtk/gdkcairo.override:
	* gtk/gdkcolor.override:
	* gtk/gdkdraw.override:
	* gtk/gdkevent.override:
	* gtk/gdkgc.override:
	* gtk/gdkpixbuf.override:
	* gtk/gdkrectangle.override:
	* gtk/gdkwindow.override:
	* gtk/gtktoolbar.override:
	Split out a few more files

2006-04-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/codegen.py:
	* codegen/definitions.py:  Add support for (unblock-threads #t) in
	functions and methods, which enables the generation of
	pyg_(begin|end)_allow_threads around the C call.

	* codegen/argtypes.py (ObjectArg.write_return): Follow up on
	#169204 to add support for const-Object as return type.  This
	fixes a build problem in pygda.

2006-04-18  John Ehresman   <jpe@wingware.com>

	* setup.py: Remove support for building / installing gobject, pygtk.py,
	and dsextras.py

2006-04-16  Richard Hult  <richard@imendio.com>

	* gtk/gtkmodule.c: 
	* gtk/gtk.override: Move locale.h include from gtkmodule.c here to
	fix the build.

2006-04-13  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkcontainer.override (pygtk_container_for_common): 
	Set an exception and jump out (Coverity)
	
	* gtk/gtk.override (_wrap_gtk_stock_list_ids): Decref py_item
	after using it (Coverity)

2006-04-06  Johan Dahlin  <johan@gnome.org>

	* gtk/__init__.py (_init): Add log handlers here
	(threads_init): Deprecated gtk.threads_*, gtk.gdk.threads_* should