@@ -232,6 +232,12 @@
   )
 )
 
+(define-boxed Region
+  (in-module "Gdk")
+  (c-name "GdkRegion")
+  (gtype-id "PYGDK_TYPE_REGION")
+)
+
 ;; Enumerations and flags ...
 
 (define-enum ColorSpace
