@@ -23523,6 +23523,7 @@
   (of-object "GtkWidget")
   (c-name "gtk_widget_region_intersect")
   (return-type "GdkRegion*")
+  (caller-owns-return #t)
   (parameters
     '("GdkRegion*" "region")
   )
