@@ -1,5 +1,14 @@
 2006-05-01  John Ehresman <jpe@wingware.com>
 
+	* gtk/gdk-types.defs:
+	* gtk/gdk.defs:
+	* gtk/gdk.override
+	* gtk/gtk.defs:
+	* gtk/pygtk-private.h:
+	GdkRegion wrapper
+
+2006-05-01  John Ehresman <jpe@wingware.com>
+
 	* gtk/gtktreeview.override: Restore override for
 	TreeView.get_visible_rect
 
